// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.json5 - json5-verify 1`] = `
/** @format */

{hello:       "world"}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/** @format */

{ hello: "world" }

`;

exports[`without-pragma.json5 - json5-verify 1`] = `
{hello:       "world"}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{hello:       "world"}

`;
